operating expansion move

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +69,7 @@
     "    def add_node(self, E0=0, E1=0)->int:\n",
     "        x_id = self.vertex_num\n",
     "        self.vertex_num += 1\n",
+    "        self.vertex_num = int(self.vertex_num)\n",
     "        self.add_term1(x_id, E0,E1)\n",
     "        return x_id\n",
     "\n",
@@ -80,7 +81,7 @@
     "    # Add a term E(x) of one binary variable to the energy function,\n",
     "    # where E(0) = E0, E(1) = E1. E0 and E1 can be arbitrary.\n",
     "    def add_term1(self, x_id, E0, E1)->None:\n",
-    "        self.edges.extend(([0,x_id], [x_id,1]))\n",
+    "        self.edges.extend(([0,int(x_id)], [int(x_id),1]))\n",
     "        if(E0 > E1):\n",
     "            self.capacity.extend((0, E0-E1))\n",
     "        else:\n",
@@ -94,16 +95,16 @@
     "    def add_term2(self, x_id, y_id, E00, E01, E10, E11)->None:\n",
     "        # E = A B = B B + A-B 0 +    0    0\n",
     "        #     C D   D D   A-B 0   B+C-A-D 0\n",
-    "        self.add_term1(x_id, E01, E11)\n",
+    "        self.add_term1(int(x_id), E01, E11)\n",
     "        self.add_term1(y_id, E00 - E01, 0)\n",
-    "        self.edges.extend(([x_id, y_id], [y_id, x_id]))\n",
+    "        self.edges.extend(([int(x_id), int(y_id)], [int(y_id), int(x_id)]))\n",
     "        self.capacity.extend((0, E01 + E10 - E00 - E11))\n",
     "        return\n",
     "\n",
     "    # Forbid (x, y) = (0, 1) by putting infinite value to\n",
     "    # the edge from x to y\n",
     "    def forbid01(self, x_id, y_id)->None:\n",
-    "        self.edges.extend(([x_id, y_id], [y_id, x_id]))\n",
+    "        self.edges.extend(([int(x_id), int(y_id)], [int(y_id), int(x_id)]))\n",
     "        self.capacity.extend((np.inf, 0))\n",
     "        return\n",
     "    \n",
@@ -117,12 +118,14 @@
     "            vertex_attrs={'label': np.arange(self.vertex_num)},\n",
     "            directed = True\n",
     "        )\n",
-    "        print(\"self.capacity\",self.capacity)\n",
-    "        print(\"self.edges\",self.edges)\n",
+    "        # print(\"self.capacity\",self.capacity)\n",
+    "        # print(\"self.edges\",self.edges)\n",
+    "        print(\"running graph cut\")\n",
     "        self.mincut = self.graph.mincut(source = 0, target = 1, capacity=\"weight\")\n",
-    "        print(\"self.mincut.value\",self.mincut.value)\n",
-    "        print(\"self.Econst\",self.Econst)\n",
-    "        return self.mincut.value + self.Gconst\n",
+    "        print(\"finished graph cut\")\n",
+    "        # print(\"self.mincut.value\",self.mincut.value)\n",
+    "        # print(\"self.Econst\",self.Econst)\n",
+    "        return self.mincut.value + self.Gconst + self.Econst\n",
     "    \n",
     "    def visualize(self):\n",
     "        visual_style = {}\n",
@@ -147,17 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "self.capacity [0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 3, 0, 4, 0, 0, 0, 4, 0, 5, 5, 0, 0, 10, inf, 0]\n",
-      "self.edges [[0, 2], [2, 1], [0, 3], [3, 1], [0, 4], [4, 1], [0, 2], [2, 1], [0, 3], [3, 1], [0, 4], [4, 1], [0, 2], [2, 1], [0, 3], [3, 1], [2, 3], [3, 2], [0, 3], [3, 1], [0, 4], [4, 1], [3, 4], [4, 3], [2, 4], [4, 2]]\n",
-      "self.mincut.value 6.0\n",
-      "self.Econst 0\n"
+      "running graph cut\n",
+      "finished graph cut\n"
      ]
     },
     {
@@ -166,7 +167,7 @@
        "-5.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,14 +428,17 @@
     "\n",
     "    def recover_configuration(self, alpha):\n",
     "        partition = self.energy.mincut.partition\n",
+    "        g_alpha = np.zeros(self.energy.vertex_num)\n",
+    "        g_alpha[partition[1]] = 1\n",
+    "        # print(partition)\n",
     "        for i in range(self.limg.shape[0]):\n",
     "            for j in range(self.limg.shape[1]):\n",
     "                p = (i,j)\n",
     "                alpha_node_id = self.varsA[p]\n",
     "                d_node_id = self.vars0[p]\n",
-    "                if IS_VAR(d_node_id) and d_node_id in partition[1]:\n",
+    "                if IS_VAR(d_node_id) and g_alpha[int(d_node_id)]==1:\n",
     "                    self.d_left[p] = OCCLUDED\n",
-    "                if IS_VAR(alpha_node_id) and alpha_node_id in partition[1]:\n",
+    "                if IS_VAR(alpha_node_id) and g_alpha[int(alpha_node_id)]==1:\n",
     "                    self.d_left[p] = alpha\n",
     "        for i in range(self.limg.shape[0]):\n",
     "            for j in range(self.limg.shape[1]):\n",
@@ -453,7 +457,7 @@
     "        oldE = self.preE\n",
     "        # Max-flow, give the lowest-energy expansion move\n",
     "        E = self.minimize_energy()\n",
-    "\n",
+    "        print(\"new E\", E)\n",
     "        if E < oldE:\n",
     "            # lower energy, accept the expansion move\n",
     "            self.recover_configuration(alpha)\n",
@@ -638,37 +642,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "testSolver = Solver(rimg, limg, 2, 32,(recycle_naive_l).astype(int) ,d=2, cutoff=30, K=1929.294817737275)"
+    "testSolver = Solver(rimg, limg, 2, 32,None ,d=2, cutoff=30, K=1929.294817737275)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dovcount 70359\n",
-      "activecount 81525\n",
-      "E from data occlusion -59341622.016066246\n",
-      "E from smoothness 77683055.83620581\n"
+      "running graph cut\n",
+      "finished graph cut\n",
+      "new E -40165600.07995558\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "18341433.820139557"
+       "True"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testSolver.expansion_move(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dovcount 38039\n",
+      "activecount 39900\n",
+      "E from data occlusion -49067752.22773811\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 409 is out of bounds for axis 1 with size 409",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18316/1862402694.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtestSolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mComputeEnergy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18316/3425964757.py\u001b[0m in \u001b[0;36mComputeEnergy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    348\u001b[0m                 \u001b[0mp1\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    349\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mp2\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 350\u001b[1;33m                     \u001b[0mE\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_smoothness\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    351\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    352\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18316/3425964757.py\u001b[0m in \u001b[0;36madd_smoothness\u001b[1;34m(self, p1, p2)\u001b[0m\n\u001b[0;32m    311\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0md1\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mOCCLUDED\u001b[0m \u001b[1;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    312\u001b[0m                 \u001b[0mp2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0md1\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 313\u001b[1;33m                 \u001b[0msmoothness_term\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msmoothness_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0md1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mp2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mp2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0md1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlam\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    314\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    315\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0md2\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mOCCLUDED\u001b[0m \u001b[1;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18316/3425964757.py\u001b[0m in \u001b[0;36msmoothness_value\u001b[1;34m(self, asn1, asn2, lam)\u001b[0m\n\u001b[0;32m    109\u001b[0m         \u001b[0mp2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlimg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0masn2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m         \u001b[0mq1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlimg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0masn1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 111\u001b[1;33m         \u001b[0mq2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlimg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0masn2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    112\u001b[0m         \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mp2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq1\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mq2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m<\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    113\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mlam\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 409 is out of bounds for axis 1 with size 409"
+     ]
     }
    ],
    "source": [
